--- a/admin.html
+++ b/admin.html
@@ -376,10 +376,11 @@
                             <table style="width: 100%;margin: 40px 0;">
                                 <!--noi dung tieu de-->
                                 <tr class="title">
-                                    <th style="color: blue;">Tên Khách Hàng</th>
-                                    <th style="color: blue;">Địa chỉ</th>
-                                    <th style="color: blue;">Số Sản Phẩm Đã Mua</th>
-                                    <th style="color: blue;" onclick="showDetailListUser()">Xem hóa đơn</th>
+                                    <th>Tên Khách Hàng</th>
+                                    <th >Địa chỉ</th>
+                                    <th >Số Sản Phẩm Đã Mua</th>
+                                    
+                                    <th  onclick="showDetailListUser()">Xem hóa đơn</th>
                                 </tr>
                                 
                                 <!--noi dung cac san pham-->
@@ -391,25 +392,25 @@
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">     
                                     <td style="padding: 15px 0 15px 15px;">Thanh Điền</td>
-                                    <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
-                                    <td style="padding: 15px 0 15px 15px;">2</td>
+                                    <td style="padding: 15px 0 15px 15px;">Đạo học sài gòn</td>
+                                    <td style="padding: 15px 0 15px 15px;">8</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailListUser()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">     
                                     <td style="padding: 15px 0 15px 15px;">Trọng Hiếu</td>
-                                    <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
-                                    <td style="padding: 15px 0 15px 15px;">2</td>
+                                    <td style="padding: 15px 0 15px 15px;">Đạo học trăm măm</td>
+                                    <td style="padding: 15px 0 15px 15px;">7</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailListUser()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">     
                                     <td style="padding: 15px 0 15px 15px;">Thanh</td>
-                                    <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
-                                    <td style="padding: 15px 0 15px 15px;">2</td>
+                                    <td style="padding: 15px 0 15px 15px;">Đạo học Ftu</td>
+                                    <td style="padding: 15px 0 15px 15px;">6</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailListUser()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">     
                                     <td style="padding: 15px 0 15px 15px;">Ngọc Hân</td>
-                                    <td style="padding: 15px 0 15px 15px;">22/22 Dương Bá Trạc Quận 8 tpHCM</td>
+                                    <td style="padding: 15px 0 15px 15px;">23 Phú Mỹ Hưng</td>
                                     <td style="padding: 15px 0 15px 15px;">2</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailListUser()">Xem hóa đơn</td>
                                 </tr>
