--- a/admin.html
+++ b/admin.html
@@ -392,19 +392,19 @@
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">     
                                     <td style="padding: 15px 0 15px 15px;">Thanh Điền</td>
-                                    <td style="padding: 15px 0 15px 15px;">Đạo học sài gòn</td>
+                                    <td style="padding: 15px 0 15px 15px;">Đại học sài gòn</td>
                                     <td style="padding: 15px 0 15px 15px;">8</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailListUser()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">     
                                     <td style="padding: 15px 0 15px 15px;">Trọng Hiếu</td>
-                                    <td style="padding: 15px 0 15px 15px;">Đạo học trăm măm</td>
+                                    <td style="padding: 15px 0 15px 15px;"> Đại học bách khoa</td>
                                     <td style="padding: 15px 0 15px 15px;">7</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailListUser()">Xem hóa đơn</td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">     
                                     <td style="padding: 15px 0 15px 15px;">Thanh</td>
-                                    <td style="padding: 15px 0 15px 15px;">Đạo học Ftu</td>
+                                    <td style="padding: 15px 0 15px 15px;">Đại học Ftu</td>
                                     <td style="padding: 15px 0 15px 15px;">6</td>
                                     <td style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailListUser()">Xem hóa đơn</td>
                                 </tr>
@@ -714,7 +714,7 @@
                                 </tr>
                                 <tr class="user">
                                     <td><a href=""><img src="./img/avata3.png" alt="per3" style="width: 50px;height: 50px;border-radius: 100%;"></a></td>
-                                    <td>Nguyễn Thị C</td>
+                                    <td>Nguyễn Ân</td>
                                     <td>thic@gmail.com</td>
                                     <td>099888777</td>
                                 </tr>
@@ -728,7 +728,7 @@
                                     <th>Trạng thái</th>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td>Nguyễn Thị C</td>
+                                    <td>Nguyễn Ân</td>
                                     <td style="padding: 15px 0 15px 15px;">273 An Dương Vương, p4, q5, TP HCM</td>
                                     <td>11.490.000đ</td>
                                     <td>2024-01-01</td>
@@ -736,7 +736,7 @@
                                     <td><a style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">View</a></td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td>Nguyễn Thị C</td>
+                                    <td>Nguyễn Ân</td>
                                     <td style="padding: 15px 0 15px 15px;">273 An Dương Vương, p4, q5, TP HCM</td>
                                     <td>11.490.000đ</td>
                                     <td>2024-01-01</td>
@@ -744,7 +744,7 @@
                                     <td><a style="padding: 15px 0 15px 15px; color: blue; text-decoration: underline;cursor: pointer;" onclick="showDetailBill()">View</a></td>
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td>Nguyễn Thị C</td>
+                                    <td>Nguyễn Ân</td>
                                     <td style="padding: 15px 0 15px 15px;">273 An Dương Vương, p4, q5, TP HCM</td>
                                     <td>11.490.000đ</td>
                                     <td>2024-01-01</td>
@@ -760,7 +760,7 @@
                                     
                                 </tr>
                                 <tr class="product" style="font-size: 16px;box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;border-radius: 4px;">
-                                    <td>Nguyễn Thị C</td>
+                                    <td>Nguyễn Ân</td>
                                     <td style="padding: 15px 0 15px 15px;">273 An Dương Vương, p4, q5, TP HCM</td>
                                     <td>11.490.000đ</td>
                                     <td>2024-01-01</td>
